# nand2tetris

./: .gitmodules  Cargo.toml  README.md
rust_code/jack_ast/: .gitignore  Cargo.toml
rust_code/jack_ast/priv/test/cmp/: class_vars.xml  do.xml  expressions.xml  function.xml  lets.xml  return.xml  statements.xml  vars.xml  while_statement.xml
rust_code/jack_ast/src/: lib.rs  xml.rs
rust_code/jack_ast/src/gramar/: array_index.rs  ast_elem.rs  ast_kind.rs  class.rs  class_var.rs  do_statement.rs  expression.rs  expression_in_breackets.rs  expression_list.rs  function_call.rs  if_statement.rs  let_statement.rs  mod.rs  params_list.rs  return_statement.rs  statement.rs  statements.rs  subroutine_body.rs  subroutine_dec.rs  tag.rs  term.rs  var.rs  while_statement.rs
rust_code/jack_ast/src/gramar/ast/: assign.rs  call.rs  calss.rs  condition.rs  cycle.rs  declaration.rs  expression.rs  expressions.rs  mod.rs  ret.rs  statements.rs  subroutine.rs  term.rs
rust_code/jack_ast/src/gramar/builders/: assign.rs  behaviour.rs  call.rs  class.rs  condition.rs  cycle.rs  declaration.rs  engine.rs  errors.rs  mod.rs  params.rs  ret.rs  (+3 more)
rust_code/jack_ast/src/tokens/: comment.rs  ident.rs  intlit.rs  keyword.rs  mod.rs  stringlit.rs  symbol.rs
rust_code/vm_translator/: Cargo.toml
rust_code/vm_translator/priv/memory/: arg_3_pop_answer.asm  local_10_pop_answer.asm  that_3_pop_answer.asm  tmp_2_push_answer.asm
rust_code/vm_translator/src/: context.rs  main.rs
rust_code/vm_translator/src/translator/: arithmetic.rs  branch.rs  constants.rs  function.rs  memory.rs  model.rs
(+117 files in other folders)
