[package]
name = "jack_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-stream = "0.1"
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.7.0"
file_context = { path = "../file_context" }
