[package]
name = "vm_translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
pin-utils = "0.1"
phf = { version = "0.11.2", features = ["macros"] }
hack_macro = { path = "../hack_macro" }
hack_ast = { path = "../hack_ast" }
symbolic = { path = "../symbolic" }
vm_tokens = { path = "../vm_tokens" }
